syntax = "proto3";

package utopia.brain.integrator.v1;

enum language {
  EN = 0;
  ES = 1;
}

enum mode {
  DEFAULT = 0;
  AUDIO = 1;
}

enum model {
  BASIL = 0;
  BASILIO = 1;
  MACRI = 2;
  REDDIT_TWITTER = 3;
  WILLIAM = 4;
  CHARLIE = 5;
  LEO = 6;
  GUILLERMO = 7;
}

message InputSentence {
  string input_sentence = 1;
  string user_id = 2;
  language language = 3;
  model model = 4;
  string roomid = 5;
  int64 ntp = 6;
  mode mode = 7;
}

message OutputSentence {
  string output_sentence = 1;
  string user_id = 2;
  string roomid = 3;
  int64 ntp = 4;
}

message UserID {
  string user_id = 1;
}

message ModelDescription {
  language language = 1;
  model model = 2;
}

message ModelInfo {
  string startTime = 1;
  string status = 2;
  string memoryUsage = 3;
  string pid = 4;
  string gpu = 5;
  string gpuUsage = 6;
  string createdTime = 7;
  string modifiedTime = 8;
}

message Empty {}

service Chatbot {
  rpc RunBot(InputSentence) returns (OutputSentence) {}
  rpc ResetHistory(UserID) returns (OutputSentence) {}
  rpc GetInfoModel(ModelDescription) returns (ModelInfo) {}
}
